* hash.c (each_pair_i_fast): Fix compile error with old version of   fcc on Solaris 10. [Bug #12768] [ruby-dev:49808]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56171 b2dd03c8-39d4-4d8f-98ff-823fe69b080e