hash.c
@@ -1750,7 +1750,9 @@ each_pair_i(VALUE key, VALUE value)
 static int
 each_pair_i_fast(VALUE key, VALUE value)
 {
-    VALUE argv[2] = {key, value};
+    VALUE argv[2];
+    argv[0] = key;
+    argv[1] = value;
     rb_yield_values2(2, argv);
     return ST_CONTINUE;
 }
